--- a/TypeScript/TypeScript.csproj
+++ b/TypeScript/TypeScript.csproj
@@ -69,4 +69,7 @@
     <TypeScriptSourceMap>false</TypeScriptSourceMap>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(ProjectDir)\app.js $(ProjectDir)\..\ /y /f</PostBuildEvent>
+  </PropertyGroup>
 </Project>
