This project is broken, but I'm going to see if I can move forward with this.

--- a/TypeScript/TypeScript.csproj
+++ b/TypeScript/TypeScript.csproj
@@ -20,6 +20,10 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="index.html" />
+    <Content Include="PlayFabSdk\src\PlayFab\PlayFabAdminApi.js" />
+    <Content Include="PlayFabSdk\src\PlayFab\PlayFabClientApi.js" />
+    <Content Include="PlayFabSdk\src\PlayFab\PlayFabMatchmakerApi.js" />
+    <Content Include="PlayFabSdk\src\PlayFab\PlayFabServerApi.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -32,6 +36,18 @@
     <None Include="web.Release.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="PlayFabSdk\src\Typings\PlayFab\Playfab.d.ts" />
+    <TypeScriptCompile Include="PlayFabSdk\src\Typings\PlayFab\PlayFabAdminApi.d.ts" />
+    <TypeScriptCompile Include="PlayFabSdk\src\Typings\PlayFab\PlayFabClientApi.d.ts" />
+    <TypeScriptCompile Include="PlayFabSdk\src\Typings\PlayFab\PlayFabMatchmakerApi.d.ts" />
+    <TypeScriptCompile Include="PlayFabSdk\src\Typings\PlayFab\PlayFabServerApi.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\PlayFab\CloudScript.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\PlayFab\PlayStream.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="cloudscript.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
